--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -18,6 +19,8 @@ body {
 }
 
 main {
+  padding-top: 30px;
+  padding-bottom: 30px;
   width: 80%;
   margin: auto;
 }
@@ -61,4 +64,15 @@ a:hover {
   background-color: black;
   color: white;
   transition: .4s;
+}
+
+@media (max-width: 500px) {
+  .links, a {
+    display: block;
+  }
+
+  a {
+    margin-top: 20px;
+    text-align: center;
+  }
 }
