--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background:linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
-    ), url('background-image.jpg');
+    ), url('katie-koehl-background.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
